--- a/po/nl/admin.po
+++ b/po/nl/admin.po
@@ -2,8 +2,8 @@
 
 msgid ""
 msgstr ""
-"Project-Id-Version: admin-nl.1485276131\n"
-"PO-Revision-Date: 2017-01-24 17:42+0100\n"
+"Project-Id-Version: admin-nl.1530698041\n"
+"PO-Revision-Date: 2018-07-04 11:54+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -45,6 +45,12 @@ msgstr ""
 msgid "Add booking"
 msgstr ""
 
+msgid "Add bookkeeping account"
+msgstr ""
+
+msgid "Add bookkeeping_account"
+msgstr ""
+
 msgid "Add credit note"
 msgstr ""
 
@@ -78,10 +84,10 @@ msgstr ""
 msgid "Add Payment"
 msgstr ""
 
-msgid "Add Product definition"
+msgid "Add product definition"
 msgstr ""
 
-msgid "Add product definition"
+msgid "Add Product definition"
 msgstr ""
 
 msgid "Add role"
@@ -120,6 +126,9 @@ msgstr ""
 msgid "Amount"
 msgstr ""
 
+msgid "Amount on bookkeeping account"
+msgstr ""
+
 msgid "Any"
 msgstr ""
 
@@ -147,6 +156,12 @@ msgstr ""
 msgid "Are you sure you want to delete this page?"
 msgstr ""
 
+msgid "Are you sure you want to remove this booking"
+msgstr ""
+
+msgid "Are you sure you want to remove this extractor?"
+msgstr ""
+
 msgid "Are you sure you want to remove this invoice queue item?"
 msgstr ""
 
@@ -159,6 +174,9 @@ msgstr ""
 msgid "Automatic"
 msgstr ""
 
+msgid "Automatic link"
+msgstr ""
+
 msgid "Balance"
 msgstr ""
 
@@ -168,7 +186,13 @@ msgstr ""
 msgid "Bank"
 msgstr ""
 
+msgid "Bank Account"
+msgstr ""
+
 msgid "Bank account"
+msgstr ""
+
+msgid "Bank account settings"
 msgstr ""
 
 msgid "Bank Account Statement"
@@ -180,13 +204,25 @@ msgstr ""
 msgid "Bank IBAN"
 msgstr ""
 
+msgid "Bank Transaction"
+msgstr ""
+
 msgid "Batch link"
 msgstr ""
 
 msgid "Batch process"
 msgstr ""
 
+msgid "Below you can find a list of all your bank accounts."
+msgstr ""
+
 msgid "BIC"
+msgstr ""
+
+msgid "Book bookkeeping account"
+msgstr ""
+
+msgid "Book incoming credit note"
 msgstr ""
 
 msgid "Book incoming invoice"
@@ -196,6 +232,18 @@ msgid "Book outgoing invoice"
 msgstr ""
 
 msgid "Bookings"
+msgstr ""
+
+msgid "Bookkeeping"
+msgstr ""
+
+msgid "Bookkeeping account"
+msgstr ""
+
+msgid "Bookkeeping accounts"
+msgstr ""
+
+msgid "Bookkeeping Accounts"
 msgstr ""
 
 msgid "Cancel"
@@ -219,6 +267,9 @@ msgstr ""
 msgid "Click & Post username"
 msgstr ""
 
+msgid "Click on your account to see the transactions."
+msgstr ""
+
 msgid "Close"
 msgstr ""
 
@@ -232,6 +283,9 @@ msgid "Company settings"
 msgstr ""
 
 msgid "Configuration"
+msgstr ""
+
+msgid "Confirm link"
 msgstr ""
 
 msgid "Connected"
@@ -318,6 +372,9 @@ msgstr ""
 msgid "Customers"
 msgstr ""
 
+msgid "Data"
+msgstr ""
+
 msgid "Date"
 msgstr ""
 
@@ -325,6 +382,9 @@ msgid "days"
 msgstr ""
 
 msgid "Delete"
+msgstr ""
+
+msgid "Delete booking"
 msgstr ""
 
 msgid "Delete document"
@@ -348,10 +408,10 @@ msgstr ""
 msgid "Document details"
 msgstr ""
 
-msgid "Document management"
+msgid "Document Management"
 msgstr ""
 
-msgid "Document Management"
+msgid "Document management"
 msgstr ""
 
 msgid "Document type"
@@ -376,6 +436,9 @@ msgid "Drag and Drop file"
 msgstr ""
 
 msgid "Edit Bank Account"
+msgstr ""
+
+msgid "Edit bookkeeping account"
 msgstr ""
 
 msgid "Edit Contracts"
@@ -418,6 +481,9 @@ msgid "Edit supplier"
 msgstr ""
 
 msgid "Edit transaction"
+msgstr ""
+
+msgid "Edit transaction extractor"
 msgstr ""
 
 msgid "Edit user"
@@ -465,6 +531,12 @@ msgstr ""
 msgid "Expiration date"
 msgstr ""
 
+msgid "Export"
+msgstr ""
+
+msgid "Export bank account"
+msgstr ""
+
 msgid "Export credit notes"
 msgstr ""
 
@@ -477,6 +549,9 @@ msgstr ""
 msgid "Export invoices"
 msgstr ""
 
+msgid "Export statements"
+msgstr ""
+
 msgid "Exports"
 msgstr ""
 
@@ -487,6 +562,9 @@ msgid "Extractor"
 msgstr ""
 
 msgid "Extractor parse content"
+msgstr ""
+
+msgid "Extractors"
 msgstr ""
 
 msgid "Fax"
@@ -537,16 +615,22 @@ msgstr ""
 msgid "IBAN"
 msgstr ""
 
-msgid "Id"
+msgid "ID"
 msgstr ""
 
-msgid "ID"
+msgid "Id"
 msgstr ""
 
 msgid "Identifier"
 msgstr ""
 
+msgid "If no link is possible, return false"
+msgstr ""
+
 msgid "If you make any changes to this contact, existing invoices for this contact will retain the original contact-information"
+msgstr ""
+
+msgid "If your account is not shown, it was not yet included in any CODA file."
 msgstr ""
 
 msgid "IMAP password"
@@ -567,6 +651,9 @@ msgstr ""
 msgid "Incoming"
 msgstr ""
 
+msgid "Incoming credit note"
+msgstr ""
+
 msgid "Incoming creditnote"
 msgstr ""
 
@@ -579,10 +666,10 @@ msgstr ""
 msgid "Incoming invoice"
 msgstr ""
 
-msgid "Incoming invoices"
+msgid "Incoming Invoices"
 msgstr ""
 
-msgid "Incoming Invoices"
+msgid "Incoming invoices"
 msgstr ""
 
 msgid "Invoice"
@@ -600,10 +687,10 @@ msgstr ""
 msgid "Invoice number"
 msgstr ""
 
-msgid "Invoice queue"
+msgid "Invoice Queue"
 msgstr ""
 
-msgid "Invoice Queue"
+msgid "Invoice queue"
 msgstr ""
 
 msgid "Invoice queue item details"
@@ -636,10 +723,28 @@ msgstr ""
 msgid "Last name"
 msgstr ""
 
+msgid "Last update:"
+msgstr ""
+
 msgid "Lastname"
 msgstr ""
 
 msgid "Link transactions"
+msgstr ""
+
+msgid "Link with bookkeeping account"
+msgstr ""
+
+msgid "Link with credit note"
+msgstr ""
+
+msgid "Link with customer"
+msgstr ""
+
+msgid "Link with invoice"
+msgstr ""
+
+msgid "Link with supplier"
 msgstr ""
 
 msgid "Loading content"
@@ -672,10 +777,10 @@ msgstr ""
 msgid "Mailscanner"
 msgstr ""
 
-msgid "Mailscanner Settings"
+msgid "Mailscanner settings"
 msgstr ""
 
-msgid "Mailscanner settings"
+msgid "Mailscanner Settings"
 msgstr ""
 
 msgid "Make all documents available via API"
@@ -693,7 +798,13 @@ msgstr ""
 msgid "Mark selected items as paid"
 msgstr ""
 
+msgid "Max"
+msgstr ""
+
 msgid "Message"
+msgstr ""
+
+msgid "Message contains"
 msgstr ""
 
 msgid "Mobile"
@@ -703,6 +814,12 @@ msgid "Modify customer contact"
 msgstr ""
 
 msgid "month"
+msgstr ""
+
+msgid "Monthly"
+msgstr ""
+
+msgid "More than one link can be made."
 msgstr ""
 
 msgid "Name"
@@ -727,6 +844,9 @@ msgid "No"
 msgstr ""
 
 msgid "No bank accounts found."
+msgstr ""
+
+msgid "No bookkeeping accounts found."
 msgstr ""
 
 msgid "No credit notes created."
@@ -789,10 +909,19 @@ msgstr ""
 msgid "Object indentifiers"
 msgstr ""
 
+msgid "Objects should be of type 'Invoice', 'Supplier', 'Bookkeeping_Account', 'Supplier' or 'Customer_Contact'."
+msgstr ""
+
 msgid "Only expose documents with tag"
 msgstr ""
 
 msgid "or click here"
+msgstr ""
+
+msgid "Other account number contains"
+msgstr ""
+
+msgid "Other name contains"
 msgstr ""
 
 msgid "Outgoing invoice"
@@ -828,6 +957,9 @@ msgstr ""
 msgid "Payments"
 msgstr ""
 
+msgid "PDF Documents"
+msgstr ""
+
 msgid "PDF Extractor"
 msgstr ""
 
@@ -855,13 +987,28 @@ msgstr ""
 msgid "Please select 1 or more pages to convert to a document."
 msgstr ""
 
+msgid "Please select a bookkeeping account in the search result"
+msgstr ""
+
 msgid "Please select a customer."
+msgstr ""
+
+msgid "Please select an account"
 msgstr ""
 
 msgid "Please select an invoice contact."
 msgstr ""
 
+msgid "Please select an invoice in the search result"
+msgstr ""
+
 msgid "Please select an invoice."
+msgstr ""
+
+msgid "Please use"
+msgstr ""
+
+msgid "Press import to start importing a new CODA file."
 msgstr ""
 
 msgid "Preview"
@@ -894,10 +1041,10 @@ msgstr ""
 msgid "Product definition"
 msgstr ""
 
-msgid "Product definitions"
+msgid "Product Definitions"
 msgstr ""
 
-msgid "Product Definitions"
+msgid "Product definitions"
 msgstr ""
 
 msgid "Product Types"
@@ -909,16 +1056,19 @@ msgstr ""
 msgid "Quantity"
 msgstr ""
 
+msgid "Quarterly"
+msgstr ""
+
 msgid "Queue content"
 msgstr ""
 
-msgid "Recurring Invoice queue"
+msgid "Recurring invoice queue"
 msgstr ""
 
 msgid "Recurring Invoice Queue"
 msgstr ""
 
-msgid "Recurring invoice queue"
+msgid "Recurring Invoice queue"
 msgstr ""
 
 msgid "Reference"
@@ -969,6 +1119,12 @@ msgstr ""
 msgid "Search"
 msgstr ""
 
+msgid "Search bookkeeping account"
+msgstr ""
+
+msgid "Search bookkeeping accounts"
+msgstr ""
+
 msgid "Search customer"
 msgstr ""
 
@@ -979,6 +1135,9 @@ msgid "Search incoming invoice"
 msgstr ""
 
 msgid "Search invoice"
+msgstr ""
+
+msgid "Search invoices"
 msgstr ""
 
 msgid "Search supplier"
@@ -1024,6 +1183,9 @@ msgid "Standard document"
 msgstr ""
 
 msgid "Start date"
+msgstr ""
+
+msgid "Start fiscal year"
 msgstr ""
 
 msgid "Start import"
@@ -1092,6 +1254,9 @@ msgstr ""
 msgid "The selected element has been removed."
 msgstr ""
 
+msgid "The total amount cannot exceed the amount of the transaction"
+msgstr ""
+
 msgid "The VAT amount seems to be incorrect"
 msgstr ""
 
@@ -1099,6 +1264,9 @@ msgid "There are no invoice queue items to be invoiced"
 msgstr ""
 
 msgid "There are no unpaid invoices"
+msgstr ""
+
+msgid "There is a problem with the amounts you have entered."
 msgstr ""
 
 msgid "This field is required."
@@ -1122,10 +1290,13 @@ msgstr ""
 msgid "To"
 msgstr ""
 
-msgid "To/from"
+msgid "to link the transaction amount to the object."
 msgstr ""
 
 msgid "To/From"
+msgstr ""
+
+msgid "To/from"
 msgstr ""
 
 msgid "toggle all"
@@ -1158,10 +1329,19 @@ msgstr ""
 msgid "Transaction amount"
 msgstr ""
 
+msgid "Transaction Balance"
+msgstr ""
+
 msgid "Transaction details"
 msgstr ""
 
+msgid "Transaction extractor"
+msgstr ""
+
 msgid "Transaction ID"
+msgstr ""
+
+msgid "Transaction information"
 msgstr ""
 
 msgid "Transactions"
@@ -1197,6 +1377,9 @@ msgstr ""
 msgid "Values fetched with extractor"
 msgstr ""
 
+msgid "Variable $transaction is available."
+msgstr ""
+
 msgid "Vat"
 msgstr ""
 
@@ -1204,6 +1387,9 @@ msgid "VAT"
 msgstr ""
 
 msgid "VAT Bound"
+msgstr ""
+
+msgid "VAT calculation"
 msgstr ""
 
 msgid "VAT problem"
@@ -1222,6 +1408,9 @@ msgid "You are not allowed to view this page"
 msgstr ""
 
 msgid "You can find it in the list below."
+msgstr ""
+
+msgid "Your bank account needs to be linked to a bookkeeping account in order to make exports."
 msgstr ""
 
 msgid "Your company information is added to invoice documents."
