--- a/po/nl/email.po
+++ b/po/nl/email.po
@@ -2,8 +2,8 @@
 
 msgid ""
 msgstr ""
-"Project-Id-Version: email-nl.1485356221\n"
-"PO-Revision-Date: 2017-01-25 15:57+0100\n"
+"Project-Id-Version: email-nl.1570705811\n"
+"PO-Revision-Date: 2019-10-10 13:10+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +25,7 @@ msgid "Dear customer"
 msgstr "Beste klant"
 
 msgid "Description"
-msgstr "Beschrijving"
+msgstr "Omschrijving"
 
 msgid "E"
 msgstr "E"
@@ -69,6 +69,12 @@ msgstr "Betalings gegevens"
 msgid "Please keep in mind that we did not yet receive a payment for this order. You can find all the necessary payment information below, as well as on the invoice."
 msgstr "We hebben voor deze bestelling nog geen betaling ontvangen. U kan de betaalgegevens hieronder vinden, alsook op het factuur."
 
+msgid "Powered by"
+msgstr ""
+
+msgid "Price"
+msgstr "Prijs"
+
 msgid "Price excl."
 msgstr "Prijs excl BTW"
 
@@ -82,7 +88,7 @@ msgid "Products"
 msgstr "Producten"
 
 msgid "Qty"
-msgstr "Aantal"
+msgstr "Hoeveelheid"
 
 msgid "Services"
 msgstr "Diensten"
