--- a/po/fr/pdf.po
+++ b/po/fr/pdf.po
@@ -10,10 +10,10 @@ msgstr ""
 "Language: fr\n"
 
 msgid "Already paid"
-msgstr ""
+msgstr "Déjà payé"
 
 msgid "An overview of the outstanding invoices can be found below."
-msgstr ""
+msgstr "Un aperçu des factures en attente est présenté ci-dessous."
 
 msgid "Bank"
 msgstr "Banque"
@@ -22,16 +22,16 @@ msgid "BIC"
 msgstr "BIC"
 
 msgid "Creditnote"
-msgstr ""
+msgstr "Creditnote"
 
 msgid "Customer"
-msgstr ""
+msgstr "Client"
 
 msgid "Date"
-msgstr ""
+msgstr "Date"
 
 msgid "Dear"
-msgstr ""
+msgstr "Madame, Monsieur"
 
 msgid "Description"
 msgstr "Description"
@@ -40,37 +40,37 @@ msgid "Expiration date"
 msgstr "Date d'expiration"
 
 msgid "For your payments, please use the following information"
-msgstr ""
+msgstr "Pour vos paiements, veuillez utiliser les informations suivantes"
 
 msgid "IBAN"
 msgstr "IBAN"
 
 msgid "If you have any questions about this letter, you can contact us by phone on"
-msgstr ""
+msgstr "Si vous avez des questions à propos de cette lettre, n'hésitez pas à nous contacter au"
 
 msgid "Invoice"
 msgstr "Facture"
 
 msgid "Invoice is PAID"
-msgstr ""
+msgstr "Facture payée"
 
 msgid "Invoice number"
-msgstr ""
+msgstr "Numéro de facture"
 
 msgid "Message"
 msgstr "Message"
 
 msgid "or via email on"
-msgstr ""
+msgstr "ou par courriel à"
 
 msgid "Our records indicate that one or more invoices are still unpaid."
-msgstr ""
+msgstr "Nos données montrent qu'une ou plusieurs factures restent impayées."
 
 msgid "Outstanding"
-msgstr ""
+msgstr "En suspens"
 
 msgid "Page"
-msgstr ""
+msgstr "Page"
 
 msgid "Price"
 msgstr "Prix"
@@ -79,7 +79,7 @@ msgid "Qty"
 msgstr "Qté"
 
 msgid "Reference"
-msgstr ""
+msgstr "Référence"
 
 msgid "Structured message"
 msgstr "Message structuré"
@@ -88,7 +88,7 @@ msgid "Subtotal"
 msgstr "Sous-total"
 
 msgid "This invoice is payable to account"
-msgstr ""
+msgstr "Cette facture est payable au compte"
 
 msgid "Total"
 msgstr "Total"
@@ -103,14 +103,14 @@ msgid "VAT"
 msgstr "TVA"
 
 msgid "VAT customer"
-msgstr ""
+msgstr "TVA client"
 
 msgid "We hereby ask for your attention for the following."
-msgstr ""
+msgstr "Nous attirons votre attention sur ce qui suit."
 
 msgid "We kindly ask you to pay the total outstanding amount within 14 days."
-msgstr ""
+msgstr "Nous vous saurions gré de payer le(s) montant(s) en suspens sous 14 jours."
 
 msgid "With kind regards"
-msgstr ""
+msgstr "Cordialement"
 
